# ai-writing

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.claude/agents/: backend-engineer.md  code-reviewer.md  db-engineer.md  devops-engineer.md  frontend-engineer.agent.md  novel-engineer.agent.md  product-manager.md  security-reviewer.md  test-engineer.md
docs/: design-phase1.md  design-phase2.md  design-phase3.md  design-phase4.md  design-phase5.md  design.md  ieda.md  phases.md
examples/: .env.example  config.example.yaml  quick_start.sh
src/: __init__.py
src/agents/: __init__.py
src/agents/generation/: scene_generator.py
src/agents/planning/: arc_manager.py  chapter_planner.py
src/agents/setup/: setup_writer.py  synopsis_generator.py  world_generator.py
src/cli/: commands.py  main.py
src/core/: config.py  errors.py  file_io.py  llm_call.py  schema.py  state.py
src/prompts/generation/: __init__.py
src/prompts/planning/: __init__.py
src/prompts/setup/: __init__.py
src/providers/: __init__.py  anthropic_provider.py  mock_provider.py  openai_provider.py
src/utils/: constants.py  json_utils.py  logging.py
src/workspace/: layout.py  recovery.py  status.py
tests/: conftest.py
tests/agents/: test_synopsis_generator.py
tests/integration/: test_e2e_workflow.py
tests/unit/: test_state.py
