[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-system"
version = "0.1.0"
description = "AI-powered novel generation system"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Author", email = "author@example.com"},
]
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
novel = "src.cli.main:main"

[tool.setuptools]
packages = ["src"]
